fix error if cookie is none

--- a/.github/workflows/glados.yml
+++ b/.github/workflows/glados.yml
@@ -22,8 +22,9 @@ jobs:
           pip3 install -r ./glados/requirements.txt
       - name: Run checkin
         run: |
-          python3 ./glados/main.py '${{ secrets.GLADOS_COOKIE }}'
+          python3 ./glados/main.py
         env:
+          GLADOS_COOKIE: ${{ secrets.GLADOS_COOKIE }}
           PUSHPLUS_TOKEN: ${{ secrets.PUSHPLUS_TOKEN }}
           SERVER_TOKEN: ${{secrets.SERVER_TOKEN}}
       - uses: gautamkrishnar/keepalive-workflow@master  
