--- a/.github/workflows/glados.yml
+++ b/.github/workflows/glados.yml
@@ -8,13 +8,13 @@ on:
   #  branches: [ main ]
 
   schedule:
-    - cron: "1 1 1 1 1"
+    - cron: "5 0 * * *"
   
   workflow_dispatch:
 
 jobs:
   build:
-    runs-on: windows-2019
+    runs-on: windows-latest
     steps:
       - uses: actions/checkout@v3
       - name: Install requirements
